Fix gap between ORP letter and right portion by removing orp-right min-width

--- a/style.css
+++ b/style.css
@@ -59,8 +59,3 @@ button {
 .orp {
   color: #e74c3c;
 }
-
-.orp-right {
-  min-width: 10ch;
-}
-
